--- a/src/app/pages/Home/home.page.html
+++ b/src/app/pages/Home/home.page.html
@@ -1,21 +1,20 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Home</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Home</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <div id="container">
-    <strong class="capitalize">Olá mundo cruel.</strong>
-    <ion-button>Ok</ion-button>
+    <h1>Sistema de Pedidos</h1>
+
+    <img src="assets/imgs/home.png" alt="logo">
+
+    <form>
+      <ion-item>
+        <ion-label position="stacked">E-mail</ion-label>
+        <ion-input type="email"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">Senha</ion-label>
+        <ion-input type="password"></ion-input>
+      </ion-item>
+      <ion-button>Login</ion-button>
+      <ion-button fill="outline">Registrar</ion-button>
+    </form>
   </div>
 </ion-content>
