--- a/src/app/pages/Home/home.page.scss
+++ b/src/app/pages/Home/home.page.scss
@@ -4,5 +4,23 @@
   row-gap: 10px;
   height: 100%;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+
+  padding: 0 20px;
+}
+
+#container img {
+  width: 200px;
+}
+
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+
+ion-button {
+  width: 100%;
+  margin: 0;
 }
