Navegacao e pagina de categorias

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,7 +13,7 @@
         <ion-label position="stacked">Senha</ion-label>
         <ion-input type="password"></ion-input>
       </ion-item>
-      <ion-button>Login</ion-button>
+      <ion-button (click)="login()">Entrar</ion-button>
       <ion-button fill="outline">Registrar</ion-button>
     </form>
   </div>
